work around nio socket memory retention bug patch by Hannes Schmidt and jbellis; tested by Thibaut, reviewed by slebresne for CASSANDRA-2654
git-svn-id: https://svn.apache.org/repos/asf/cassandra/branches/cassandra-0.6@1131291 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+0.6.14?
+ * workaround large resultsets causing large allocation retention
+   by nio sockets (CASSANDRA-2654)
+
+
 0.6.13
  * shut down server for OOM on a Thrift thread (CASSANDRA-2269)
  * fix reversed slices on large supercolumn rows (CASSANDRA-2212)
