r/m obsolete backwards compatibility

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@
  * (CLI) jline version is bumped to 1.0 to properly  support
    'delete' key function (CASSANDRA-4132)
  * Save IndexSummary into new SSTable 'Summary' component (CASSANDRA-2392)
+ * Improve MessagingService efficiency (CASSANDRA-3617)
 
 
 1.1.1-dev
